# clv-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.app  Makefile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: data_loader.py  streamlit_app.py
app/components/: shap_plots.py
app/pages/: customer_lookup.py  portfolio_view.py  what_if_simulator.py
configs/: params.yaml
data/predictions/: scored_customers_20260713.csv
data/processed/: features_behavioral.csv  rfm_summary.csv
models/: churn_model.json  scaler.pkl  xgb_clv_model.json
reports/: cleaning_log.txt  data_validation.txt  model_card.md
src/: cli.py
src/data/: clean.py  ingest.py  validate.py
src/evaluation/: metrics.py  shap_analysis.py
src/experiment/: mlflow_config.py  tuning.py
src/features/: behavioral.py  build_features.py  rfm.py
src/models/: churn_classifier.py  churn_lightgbm.py  clv_lightgbm.py  clv_xgboost.py  probabilistic.py  train.py
src/scoring/: batch_scorer.py  monitoring.py
src/segmentation/: cluster.py
src/utils/: io.py
tests/: conftest.py  test_data_validation.py  test_features.py  test_scoring.py
